style: Fix the text color of the "Paused" screen in dark mode
When pausing the game, the "Paused" text needs to be white,
otherwise this will cause readability issues.

--- a/data/style-dark.css
+++ b/data/style-dark.css
@@ -10,7 +10,7 @@ grid.block {
 .paused {
   background: rgba(0, 0, 0, 0.75);
   font-weight: bold;
-  color: #000;
+  color: #fff;
 }
 
 sudokucell {
